SGP Cigale input by tile

--- a/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
@@ -165,10 +165,10 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [\"omeu\"]\n",
-    "g_bands = [\"OmegaCAM g\", \"decam_g\",            \"gpc1_g\"]\n",
-    "r_bands = [\"OmegaCAM r\", \"decam_r\",            \"gpc1_r\"]\n",
-    "i_bands = [\"OmegaCAM i\", \"decam_i\",            \"gpc1_i\"]\n",
+    "u_bands = [\"omegacam_u\"]\n",
+    "g_bands = [\"omegacam_g\", \"decam_g\",            \"gpc1_g\"]\n",
+    "r_bands = [\"omegacam_r\", \"decam_r\",            \"gpc1_r\"]\n",
+    "i_bands = [\"omegacam_i\", \"decam_i\",            \"gpc1_i\"]\n",
     "z_bands = [              \"decam_z\", \"vista_z\", \"gpc1_z\"]\n",
     "y_bands = [              \"decam_y\", \"vista_y\", \"gpc1_y\"]\n",
     "\n",
@@ -188,12 +188,12 @@
    },
    "outputs": [],
    "source": [
-    "remove_unneeded_fluxes(g_bands)\n",
-    "remove_unneeded_fluxes(u_bands)\n",
-    "remove_unneeded_fluxes(r_bands)\n",
-    "remove_unneeded_fluxes(i_bands)\n",
-    "remove_unneeded_fluxes(z_bands)\n",
-    "remove_unneeded_fluxes(y_bands)"
+    "# remove_unneeded_fluxes(g_bands)\n",
+    "# remove_unneeded_fluxes(u_bands)\n",
+    "# remove_unneeded_fluxes(r_bands)\n",
+    "# remove_unneeded_fluxes(i_bands)\n",
+    "# remove_unneeded_fluxes(z_bands)\n",
+    "# remove_unneeded_fluxes(y_bands)"
    ]
   },
   {
@@ -222,93 +222,34 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Number of sources with z-spec: {}\".format(len(best_catalogue)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Correction for galactic extinction\n",
-    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Convertion to CIGALE format\n",
-    "os.environ['LOG_LEVEL'] = 'INFO'\n",
-    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "remove_unneeded_fluxes(g_bands)\n",
-    "remove_unneeded_fluxes(u_bands)\n",
-    "remove_unneeded_fluxes(r_bands)\n",
-    "remove_unneeded_fluxes(i_bands)\n",
-    "remove_unneeded_fluxes(z_bands)\n",
-    "remove_unneeded_fluxes(y_bands)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180129.fits\")"
+    "for tile in file_list:\n",
+    "        \n",
+    "    file_num = tile.split('_')[4].split('.')[0]\n",
+    "    best_catalogue = Table.read(tile)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"zspec\"])]\n",
+    "    best_catalogue[\"zspec\"].name = \"redshift\"\n",
+    "\n",
+    "    print(\"Number of sources with z-spec in file {}: {}\".format(file_num, len(best_catalogue)))\n",
+    "\n",
+    "    # Correction for galactic extinction\n",
+    "    best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
+    "\n",
+    "    # Convertion to CIGALE format\n",
+    "\n",
+    "    best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)\n",
+    "\n",
+    "    remove_unneeded_fluxes(g_bands)\n",
+    "    remove_unneeded_fluxes(u_bands)\n",
+    "    remove_unneeded_fluxes(r_bands)\n",
+    "    remove_unneeded_fluxes(i_bands)\n",
+    "    remove_unneeded_fluxes(z_bands)\n",
+    "    remove_unneeded_fluxes(y_bands)\n",
+    "\n",
+    "\n",
+    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   }
  ],
