SGP run to CIgale input stage

--- a/dmu32/dmu32_SGP/SGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SGP/SGP_catalogue_merging.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,13 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import glob\n",
     "\n",
     "from astropy.table import Column, MaskedColumn, Table, join, vstack\n",
     "\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -62,12 +63,12 @@
     "# Master list\n",
     "SUFFIX = '20180221'\n",
     "file_list = glob.glob('../../dmu1/dmu1_ml_SGP/data/tiles/sub_catalogue_sgp_{}_*.fits'.format(SUFFIX))\n",
-    "ml.meta = None"
+    "#ml.meta = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -304,11 +305,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:11: RuntimeWarning: invalid value encountered in less\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n",
+      "{'redshift'}\n"
+     ]
+    }
+   ],
    "source": [
     "if FIRST_RUN_FOR_CIGALE:\n",
     "    \n",
@@ -367,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -417,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -447,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -462,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -489,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
