Working on HS82 bug where it freezes during join

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_DECAM_merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_DECAM_merging.ipynb
@@ -466,7 +466,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "decam_bands = ['g','r','i','z','y'] # Lowercase naming convention (k is Ks)\n",
