--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_VICS82_VHS_merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_VICS82_VHS_merging.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -360,7 +362,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue.add_column(Column(data=np.arange(len(master_catalogue)), \n",
@@ -415,7 +419,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vista_stats = Table()\n",
@@ -430,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vista_bands = ['j','ks'] # Lowercase naming convention (k is Ks)\n",
@@ -591,7 +599,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
