--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.4_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.4_Merging.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hsc =    Table.read(\"{}/HSC-SSP.fits\".format(TMP_DIR)   )[\"hsc_id\",      \"hsc_ra\",    \"hsc_dec\",\n",
@@ -602,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
@@ -630,9 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hsc_moc = MOC(filename=\"../../dmu0/dmu0_HSC/data/HSC-PDR1_deep_Herschel-Stripe-82_MOC.fits\")\n",
@@ -934,7 +936,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n=0\n",
@@ -965,6 +969,9 @@
     "    sub_catalogue.add_column(Column(data=flag_merged_column, name=\"flag_merged\"))\n",
     "    sub_catalogue.remove_columns(flag_merged_columns)\n",
     "\n",
+    "    #Remove stellarity and gaia flag columns which have been added back in\n",
+    "    sub_catalogue.remove_columns(flag_gaia_columns)\n",
+    "    sub_catalogue.remove_columns(stellarity_columns)\n",
     "    \n",
     "    #Add flag fill values\n",
     "    \n",
@@ -976,7 +983,7 @@
     "            sub_catalogue[col].fill_value = np.nan\n",
     "        elif \"flag\" in col:\n",
     "            sub_catalogue[col].fill_value = 0\n",
-    "        elif \"id\" in col:\n",
+    "        elif col.endswith(\"id\":\n",
     "            sub_catalogue[col].fill_value = -1\n",
     "        #Remove residual ra decs from join\n",
     "        if col.endswith('_ra'):\n",
@@ -1043,17 +1050,9 @@
     "    \n",
     "    # Remove id names and write file\n",
     "    sub_catalogue.remove_columns(id_names)\n",
+    "                          \n",
     "    sub_catalogue.write(\"{}/tiles/sub_catalogue_herschel-stripe-82{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
     "    n += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sub_catalogue.colnames"
    ]
   },
   {
