--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_VICS82_VHS_merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_VICS82_VHS_merging.ipynb
@@ -21,7 +21,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-02-20 18:50:49.783850\n"
+      "2018-02-27 12:07:30.404213\n"
      ]
     }
    ],
@@ -34,11 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "#%config InlineBackend.figure_format = 'svg'\n",
@@ -206,7 +213,7 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4529610312-135997\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4718781552-183774\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>vhs_id</th><th>ra</th><th>dec</th><th>vhs_stellarity</th><th>m_vhs_y</th><th>merr_vhs_y</th><th>m_ap_vhs_y</th><th>merr_ap_vhs_y</th><th>m_vhs_j</th><th>merr_vhs_j</th><th>m_ap_vhs_j</th><th>merr_ap_vhs_j</th><th>m_vhs_h</th><th>merr_vhs_h</th><th>m_ap_vhs_h</th><th>merr_ap_vhs_h</th><th>m_vhs_k</th><th>merr_vhs_k</th><th>m_ap_vhs_k</th><th>merr_ap_vhs_k</th><th>f_vhs_y</th><th>ferr_vhs_y</th><th>flag_vhs_y</th><th>f_ap_vhs_y</th><th>ferr_ap_vhs_y</th><th>f_vhs_j</th><th>ferr_vhs_j</th><th>flag_vhs_j</th><th>f_ap_vhs_j</th><th>ferr_ap_vhs_j</th><th>f_vhs_h</th><th>ferr_vhs_h</th><th>flag_vhs_h</th><th>f_ap_vhs_h</th><th>ferr_ap_vhs_h</th><th>f_vhs_k</th><th>ferr_vhs_k</th><th>flag_vhs_k</th><th>f_ap_vhs_k</th><th>ferr_ap_vhs_k</th><th>vhs_flag_cleaned</th><th>vhs_flag_gaia</th><th>flag_merged</th><th>vics82_id</th><th>vics82_stellarity</th><th>vics82_flag_cleaned</th><th>f_wircam_j</th><th>f_vista_j</th><th>ferr_wircam_j</th><th>ferr_vista_j</th><th>m_wircam_j</th><th>m_vista_j</th><th>merr_wircam_j</th><th>merr_vista_j</th><th>flag_wircam_j</th><th>flag_vista_j</th><th>f_ap_wircam_j</th><th>f_ap_vista_j</th><th>ferr_ap_wircam_j</th><th>ferr_ap_vista_j</th><th>m_ap_wircam_j</th><th>m_ap_vista_j</th><th>merr_ap_wircam_j</th><th>merr_ap_vista_j</th><th>f_wircam_ks</th><th>f_vista_ks</th><th>ferr_wircam_ks</th><th>ferr_vista_ks</th><th>m_wircam_ks</th><th>m_vista_ks</th><th>merr_wircam_ks</th><th>merr_vista_ks</th><th>flag_wircam_ks</th><th>flag_vista_ks</th><th>f_ap_wircam_ks</th><th>f_ap_vista_ks</th><th>ferr_ap_wircam_ks</th><th>ferr_ap_vista_ks</th><th>m_ap_wircam_ks</th><th>m_ap_vista_ks</th><th>merr_ap_wircam_ks</th><th>merr_ap_vista_ks</th><th>vics82_flag_gaia</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>472448751411</td><td>0.781408839858</td><td>0.0890078729011</td><td>0.999657</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>10.6256</td><td>0.000379132</td><td>11.0127</td><td>0.000459667</td><td>10.2142</td><td>0.000453802</td><td>10.5483</td><td>0.000520294</td><td>10.0804</td><td>0.000651023</td><td>10.2967</td><td>0.000605307</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>204058.0</td><td>71.2559</td><td>False</td><td>142869.0</td><td>60.4863</td><td>298085.0</td><td>124.59</td><td>False</td><td>219116.0</td><td>105.002</td><td>337159.0</td><td>202.166</td><td>False</td><td>276273.0</td><td>154.024</td><td>False</td><td>3</td><td>False</td><td>-1</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>0</td></tr>\n",
@@ -242,14 +249,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4529610312-135997').dataTable()\");\n",
+       "    console.log(\"$('#table4718781552-183774').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4529610312-135997').dataTable({\n",
+       "    $('#table4718781552-183774').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -419,9 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vista_stats = Table()\n",
@@ -521,7 +526,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table4787159616-351256\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4844044864-113324\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>Band</th><th>VHS</th><th>use VHS</th><th>VHS ap</th><th>use VHS ap</th><th>VICS82</th><th>use VICS82</th><th>VICS82 ap</th><th>use VICS82 ap</th></tr></thead>\n",
        "<tr><td>0</td><td>j</td><td>43636</td><td>43636</td><td>43633</td><td>43633</td><td>34934</td><td>34934</td><td>34900</td><td>34900</td></tr>\n",
        "<tr><td>1</td><td>ks</td><td>35049</td><td>35049</td><td>35042</td><td>35042</td><td>41273</td><td>41273</td><td>41094</td><td>41094</td></tr>\n",
@@ -548,14 +553,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4787159616-351256').dataTable()\");\n",
+       "    console.log(\"$('#table4844044864-113324').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4787159616-351256').dataTable({\n",
+       "    $('#table4844044864-113324').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -598,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -627,23 +632,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'ra'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-dd342df28680>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmaster_catalogue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"ra\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"vista_ra\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmaster_catalogue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"dec\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"vista_dec\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmaster_catalogue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"flag_merged\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"vista_flag_merged\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m   1220\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1222\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1223\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1224\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    104\u001b[0m         \"\"\"\n\u001b[1;32m    105\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mOrderedDict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'ra'"
-     ]
-    }
-   ],
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "master_catalogue[\"ra\"].name = \"vista_ra\"\n",
     "master_catalogue[\"dec\"].name = \"vista_dec\"\n",
@@ -652,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -673,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -691,14 +684,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4799852672-533200\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4844226768-798362\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>vhs_id</th><th>vista_ra</th><th>vista_dec</th><th>m_vista_y</th><th>merr_vista_y</th><th>m_ap_vista_y</th><th>merr_ap_vista_y</th><th>m_vista_h</th><th>merr_vista_h</th><th>m_ap_vista_h</th><th>merr_ap_vista_h</th><th>f_vista_y</th><th>ferr_vista_y</th><th>flag_vista_y</th><th>f_ap_vista_y</th><th>ferr_ap_vista_y</th><th>f_vista_h</th><th>ferr_vista_h</th><th>flag_vista_h</th><th>f_ap_vista_h</th><th>ferr_ap_vista_h</th><th>vista_flag_merged</th><th>vics82_id</th><th>f_wircam_j</th><th>f_vista_j</th><th>ferr_wircam_j</th><th>ferr_vista_j</th><th>m_wircam_j</th><th>m_vista_j</th><th>merr_wircam_j</th><th>merr_vista_j</th><th>flag_wircam_j</th><th>flag_vista_j</th><th>f_ap_wircam_j</th><th>f_ap_vista_j</th><th>ferr_ap_wircam_j</th><th>ferr_ap_vista_j</th><th>m_ap_wircam_j</th><th>m_ap_vista_j</th><th>merr_ap_wircam_j</th><th>merr_ap_vista_j</th><th>f_wircam_ks</th><th>f_vista_ks</th><th>ferr_wircam_ks</th><th>ferr_vista_ks</th><th>m_wircam_ks</th><th>m_vista_ks</th><th>merr_wircam_ks</th><th>merr_vista_ks</th><th>flag_wircam_ks</th><th>flag_vista_ks</th><th>f_ap_wircam_ks</th><th>f_ap_vista_ks</th><th>ferr_ap_wircam_ks</th><th>ferr_ap_vista_ks</th><th>m_ap_wircam_ks</th><th>m_ap_vista_ks</th><th>merr_ap_wircam_ks</th><th>merr_ap_vista_ks</th><th>vista_flag_cleaned</th><th>vista_flag_gaia</th><th>vista_stellarity</th><th>vista_intid</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>472448751411</td><td>0.781408839858</td><td>0.0890078729011</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>10.2142</td><td>0.000453802</td><td>10.5483</td><td>0.000520294</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>298085.0</td><td>124.59</td><td>False</td><td>219116.0</td><td>105.002</td><td>False</td><td>-1</td><td>nan</td><td>204058.4375</td><td>nan</td><td>71.2558517456</td><td>nan</td><td>10.6256132126</td><td>nan</td><td>0.00037913187407</td><td>False</td><td>False</td><td>nan</td><td>142869.0</td><td>nan</td><td>60.486289978</td><td>nan</td><td>11.0127</td><td>nan</td><td>0.000459667207906</td><td>nan</td><td>337159.25</td><td>nan</td><td>202.165557861</td><td>nan</td><td>10.080411911</td><td>nan</td><td>0.000651023117825</td><td>False</td><td>False</td><td>nan</td><td>276273.0</td><td>nan</td><td>154.024353027</td><td>nan</td><td>10.2967</td><td>nan</td><td>0.000605307111982</td><td>False</td><td>3</td><td>0.999657213688</td><td>0</td></tr>\n",
@@ -734,14 +727,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4799852672-533200').dataTable()\");\n",
+       "    console.log(\"$('#table4844226768-798362').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4799852672-533200').dataTable({\n",
+       "    $('#table4844226768-798362').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -755,7 +748,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
