Fixing Bootes specz

--- a/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
@@ -146,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# nb_merge_dist_plot(\n",
@@ -714,7 +716,7 @@
    },
    "outputs": [],
    "source": [
-    "specz =  Table.read(\"../../dmu23/dmu23_AKARI-SEP/data/Akari-SEP-specz-v2.csv\")"
+    "specz =  Table.read(\"../../dmu23/dmu23_Bootes/data/Bootes-specz-v2.4.csv\")"
    ]
   },
   {
