--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-02-16 15:34:40.874344\n"
+      "2018-02-27 16:09:42.977170\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "# Masterlist DR1 date\n",
-    "SUFFIX = '20180216'"
+    "SUFFIX = '20180227'"
    ]
   },
   {
@@ -250,7 +250,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:5: RuntimeWarning: invalid value encountered in less\n"
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
      ]
     }
    ],
