Depth maps on all fields

--- a/dmu1/dmu1_ml_EGS/4_Selection_function.ipynb
+++ b/dmu1/dmu1_ml_EGS/4_Selection_function.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AKARI-NEP Selection Functions\n",
+    "# EGS Selection Functions\n",
     "## Depth maps and selection functions\n",
     "\n",
     "The simplest selection function available is the field MOC which specifies the area for which there is Herschel data. Each pristine catalogue also has a MOC defining the area for which that data is available.\n",
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "FIELD = 'AKARI-NEP'\n",
+    "FIELD = 'EGS'\n",
     "#FILTERS_DIR = \"/Users/rs548/GitHub/herschelhelp_python/database_builder/filters/\"\n",
     "FILTERS_DIR = \"/opt/herschelhelp_python/database_builder/filters/\""
    ]
@@ -609,7 +609,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def FWHM(X,Y):\n",
@@ -628,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = []\n",
