Fixing memory issue on HS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.4_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.4_Merging.ipynb
@@ -1145,7 +1145,7 @@
     "n=0\n",
     "for sub_file in range(num_files):\n",
     "    # the following used to have a -1 which was wrong as it left out objects\n",
-    "    sub_catalogue = master_catalogue[n*split_length:(n+1)*split_length] \n",
+    "    sub_catalogue = master_catalogue[n*split_length:(n+1)*split_length].copy()\n",
     "    #print(n)\n",
     "    for survey in surveys:\n",
     "        #print(survey[0])\n",
@@ -1265,6 +1265,7 @@
     "    sub_catalogue.remove_columns(id_names)\n",
     "                          \n",
     "    sub_catalogue.write(\"{}/tiles/sub_catalogue_herschel-stripe-82{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
+    "    del sub_catalogue\n",
     "    n += 1"
    ]
   },
