trying garbage collection in loop

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -182,7 +182,7 @@
    ],
    "source": [
     "\n",
-    "final_data = open('final_data.lis', 'w+')\n",
+    "final_data = open('help.lis', 'w+')\n",
     "for field in dr1:\n",
     "    print('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
     "    final_data.write('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
