--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -184,8 +184,14 @@
     "\n",
     "final_data = open('help.lis', 'w+')\n",
     "for field in dr1:\n",
+    "    #Still memory issue on HS82\n",
+    "    if field[0] == 'Herschel-Stripe-82':\n",
+    "        continue\n",
     "    print('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
-    "    final_data.write('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
+    "    \n",
+    "    #Test with Cigale input files\n",
+    "    final_data.write('./dmu32_{}/data/{}_{}_cigale.fits'.format(field[0], field[0], field[1]))\n",
+    "    #final_data.write('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
     "    \n",
     "final_data.close()"
    ]
