work on final csv

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -190,7 +190,7 @@
     "    print('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
     "    \n",
     "    #Test with Cigale input files\n",
-    "    final_data.write('./dmu32_{}/data/{}_{}_cigale.fits'.format(field[0], field[0], field[1]))\n",
+    "    final_data.write('./dmu32_{}/data/{}_{}_cigale.fits\\n'.format(field[0], field[0], field[1]))\n",
     "    #final_data.write('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
     "    \n",
     "final_data.close()"
