--- a/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -57,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
@@ -80,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "quick_checks(master_catalogue).show_in_notebook()"
@@ -108,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "venn3(\n",
@@ -130,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "venn3(\n",
@@ -171,7 +181,7 @@
    "source": [
     "u_bands = [ \"SDSS u\"]\n",
     "g_bands = [ \"SDSS g\", \"DECam g\", \"GPC1 g\", \"Suprime g\", \"Megacam g\"]\n",
-    "r_bands = [ \"SDSS r\", \"DECam r\", \"GPC1 r\", \"Suprime r\", \"Megacamr\"]\n",
+    "r_bands = [ \"SDSS r\", \"DECam r\", \"GPC1 r\", \"Suprime r\", \"Megacam r\"]\n",
     "i_bands = [ \"SDSS i\", \"DECam i\", \"GPC1 i\", \"Suprime i\", \"Megacam i\"]\n",
     "z_bands = [ \"SDSS z\", \"DECam z\", \"GPC1 z\", \"Suprime z\", \"Megacam z\"]\n",
     "y_bands = [           \"DECam y\", \"GPC1 y\", \"Suprime y\", \"Megacam y\", \"VISTA Y\",  \"UKIDSS Y\"] #This will compare lower case y to upper case Y\n",
@@ -197,6 +207,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -206,9 +217,13 @@
     "        \n",
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
     "        \n",
-    "        col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
-    "        nb_compare_mags(master_catalogue[col1], master_catalogue[col2], \n",
+    "        try:\n",
+    "            col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
+    "            nb_compare_mags(master_catalogue[col1], master_catalogue[col2], \n",
     "                        labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
+    "        except KeyError:\n",
+    "            print(\"One of {} and {} is empty or missing any cross matches.\".format(col1, col2))\n",
+    "    \n",
     "        \n",
     "        col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)\n",
     "        nb_compare_mags(master_catalogue[col1], master_catalogue[col2], \n",
@@ -268,6 +283,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -345,7 +361,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_ukidss_j'][ml_twomass_idx],\n",
@@ -355,7 +373,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ukidss_ks_like = master_catalogue['m_ukidss_k'] + 0.003 + 0.004 * (\n",
@@ -376,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -401,6 +423,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -416,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -430,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -444,7 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -458,7 +487,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -472,7 +503,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
