--- a/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
@@ -302,13 +302,15 @@
     "        sdss[sdss_mag_ap_colname][sdss[sdss_mag_ap_colname] < 0.] = np.nan\n",
     "        sdss[sdss_mag_tot_colname][sdss[sdss_mag_tot_colname] < 0.] = np.nan\n",
     "  \n",
-    "\n",
-    "        sdss_mag_ap = sdss[sdss_mag_ap_colname]\n",
-    "        master_cat_mag_ap = master_catalogue[master_cat_mag_ap_colname][ml_sdss_idx]\n",
+    "        try:\n",
+    "            sdss_mag_ap = sdss[sdss_mag_ap_colname]\n",
+    "            master_cat_mag_ap = master_catalogue[master_cat_mag_ap_colname][ml_sdss_idx]\n",
     "    \n",
-    "        nb_compare_mags(sdss_mag_ap, master_cat_mag_ap,\n",
+    "            nb_compare_mags(sdss_mag_ap, master_cat_mag_ap,\n",
     "                            labels=(\"SDSS (Main survey DR13) {} (fiberMag)\".format(band[-1]), \"{} (aperture)\".format(band)))\n",
-    "    \n",
+    "        except KeyError:\n",
+    "            print(\"No aperture mags for {}\".format(master_cat_mag_ap_colname))\n",
+    "            \n",
     "        sdss_mag_tot = sdss[sdss_mag_tot_colname]\n",
     "        master_cat_mag_tot = master_catalogue[master_cat_mag_tot_colname][ml_sdss_idx]\n",
     "        \n",
